--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \setstretch{1.2}
 
 \title{UNSW Debating Society Constitution \\[0.5em] \large Current as of October 2024}
-% \date{}
+\date{}
 
 % Define custom enumerate styles for nested numbering up to depth 5
 \setlist[enumerate,1]{label=\thesection.\arabic*., ref=\thesection.\arabic*, leftmargin=*}
@@ -33,6 +33,7 @@
 
 \begin{document}
 \maketitle
+\newpage
 \tableofcontents
 
 \input{sections/01-introduction}
@@ -48,6 +49,7 @@
 \input{sections/11-tab-officer}
 \input{sections/12-dissolution}
 \appendix
+\section{Appendices}
 \input{sections/appendix-a-equity-policy}
 \input{sections/appendix-b-grievance-policy}
 
