--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -28,7 +28,7 @@
         \item If one of the trustees has a conflict of interest, then they will be excluded.
         \begin{enumerate}
             \item A trustee with a conflict of interest may recuse themselves from the decision.
-            \item Where an individual trustee with a potential conflict of interest fails to recuse themselves, they may be excluded by a simple majority vote with the other three trustees including the Vice President Internals.
+            \item Where an individual trustee with a potential conflict of interest fails to recuse themselves, they may be excluded by a simple majority vote with the other three trustees including the Vice President (Internals).
         \end{enumerate}
         \item The panel must have at least three members. If such a panel cannot be constructed, an EGM will be called to resolve this at the soonest possible time meeting all the requirements for advance notice.
         \item The decision must be distributed in the next Debsoc newsletter and on the Debsoc website.
