--- a/sections/05-executive-roles.tex
+++ b/sections/05-executive-roles.tex
@@ -51,7 +51,7 @@
     \item To organise selections for teams and adjudicators for Debsoc to send to Intervarsity tournaments;
     \item To ensure that members of Debsoc receive information and training as to the style of debate used in Intervarsity tournaments;
     \item To organise transportation and accommodation in regards to Intervarsity tournaments;
-    \item To represent Debsoc on Intervarsity Debating Councils, except Women’s Council if the Coordinator is not non cis-male; and to ensure Debsoc is represented through the Australian Representative at the Worlds Intervarsity Debating Council.
+    \item To represent Debsoc on Intervarsity Debating Councils, except WGM Council if the Coordinator is not non cis-male; and to ensure Debsoc is represented through the Australian Representative at the Worlds Intervarsity Debating Council.
     \end{enumerate}
   \end{enumerate}
 
@@ -167,7 +167,7 @@
   \item The roles of the Welfare Officer are:
     \begin{enumerate}
     \item To foster an inclusive culture within the Club;
-    \item To lead efforts ensuring that your internal Club culture is positive and to prioritise and foster wellbeing and balance within the Club;
+    \item To lead efforts ensuring that internal Club culture is positive and to prioritise and foster wellbeing and balance within the Club;
     \item Ensure that Club events will not result in poor wellbeing outcomes and will not lead to grievances from Club members and/or executives;
     \item To be an accessible contact for members, UNSW students and UNSW staff in receiving complaints and grievances relating to the Club and on any matters regarding equity of events and activities as well as conduct and diversity within the Club;
     \item To investigate grievances (where necessary) and resolve grievances or make recommendations to the Club Executive on the resolution of grievances;
@@ -178,7 +178,7 @@
     \item Provide guidance to members and representatives of the Club on appropriate ways to behave and to communicate inclusively;
     \item Ensure that all Club communications can be understood clearly by all students by avoiding the use of slang and idioms, where practicable;
     \item Monitor engagement, membership and any significant issues from students relating to non-majority demographics within the Club and provide reports to Club Executive as required;
-    \item Undertake training as required to build understanding of how to look out for your peers and how to improve the internal culture of your Club; and,
+    \item Undertake training as required to build understanding of how to look out for peers and how to improve the internal culture of the Club; and,
     \item Other relevant duties as required.
     \end{enumerate}
   \end{enumerate}
