--- a/sections/06-selections.tex
+++ b/sections/06-selections.tex
@@ -109,12 +109,12 @@
     \begin{enumerate}
     \item Increasing service points requirements;
     \item Financial liability for registration fees;
-    \item Ineligibility for selection for the next major tournament which they are eligible for, excluding Wom*ns.
-    \item The punishment applied under the punitive rule shall be subject to the discretion of the Executive, but must be proportionate to the objectives of:
-      \begin{enumerate}
-      \item Indemnifying the society from liabilities caused by the member’s withdrawal.
-      \item Deterring future withdrawals that might cause disruption to future contingents.
-      \end{enumerate}
+    \item Ineligibility for selection for the next major tournament which they are eligible for, excluding AWGMDC.
+    \end{enumerate}
+  \item The punishment applied under the punitive rule shall be subject to the discretion of the Executive, but must be proportionate to the objectives of:
+    \begin{enumerate}
+    \item Indemnifying the society from liabilities caused by the member’s withdrawal.
+    \item Deterring future withdrawals that might cause disruption to future contingents.
     \end{enumerate}
   \item In all decisions taken by the Executive under the Punitive Rule, conflicts of interest must be declared and recorded in the minutes:
     \begin{enumerate}
