--- a/sections/appendix-b-grievance-policy.tex
+++ b/sections/appendix-b-grievance-policy.tex
@@ -1,46 +1,76 @@
 \newpage
-\section{UNSW Debating Society Grievance Resolution Policy}
+\renewcommand\thesubsection{}
+\subsection{Appendix B - UNSW Debating Society Grievance Resolution Policy}
+\renewcommand\thesubsection{\Alph{subsection}}
+\stepcounter{section}
 
 \begin{enumerate}
-\item Purpose and Scope
+\item Scope
   \begin{enumerate}
-  \item This policy guides the resolution of grievances within UNSW Debsoc.
-  \item It applies to all members and attendees of society events.
+  \item The Grievance Resolution Policy applies to current UNSW students and staff, and members of the UNSW Debating Society.
+  \item The Grievance Resolution Policy applies only to grievances raised formally through the Grievance Resolution Policy and its procedures, and not to complaints raised through the Equity Policy.
   \end{enumerate}
 
-\item Principles
+\item Grievance Requirements
   \begin{enumerate}
-  \item Fairness, respect, confidentiality and timely resolution guide all grievance processes.
-  \item The policy aims to resolve conflicts constructively and maintain a supportive society environment.
+  \item This Appendix B shall only apply where a person formally reports a grievance through the Grievance Resolution Policy.
+  \item The requirements in this Appendix B do not limit or qualify in any way the provisions of the Equity Policy.
+  \item Where a person wishes to formally report a grievance through the Grievance Resolution Policy, the grievance should be submitted in writing, and must include all material details, including, but not limited to, names, dates, reasons for the grievance, and the desired result of raising the grievance.
   \end{enumerate}
 
-\item Grievance Resolution Procedures
+\item Grievance Officers
   \begin{enumerate}
-  \item Informal Resolution
+  \item The Co-Equity Officers, selected from the Debating Society Executive as per 4.2 of the Debating Society Constitution, shall concurrently serve as the Grievance Officers.
+  \item When deciding whether they are suitable to handle the grievance, a Grievance Officer should consider:
     \begin{enumerate}
-    \item Members are encouraged to resolve grievances informally through discussion or mediation.
+    \item Whether the grievance directly involves the Grievance Officer,
+    \item The Grievance Officer’s ability to remain impartial during any grievance procedure,
+    \item The Grievance Officer’s ability to successfully handle the grievance process.
     \end{enumerate}
-  \item Formal Resolution
+  \item If a Grievance Officer is not suitable to handle the grievance, the grievance must be referred to the other Grievance Officer.
+  \end{enumerate}
+
+\item Grievance Procedure
+  \begin{enumerate}
+  \item This procedure shall only apply where a person formally reports a grievance through the Grievance Resolution Policy.
+  \item Where a grievance has been formally reported through the Grievance Resolution Policy, the Grievance Officer(s) should follow the standard procedure:
     \begin{enumerate}
-    \item If informal resolution fails or is inappropriate, a formal written grievance may be submitted to the Executive or Co-Equity Officers.
-    \item The Executive or Co-Equity Officers will investigate and take appropriate action.
+    \item The Grievance Officer(s) should notify the person reporting a grievance of the Grievance Resolution Policy.
+    \item Each Grievance Officer should determine whether they are the appropriate person to handle the grievance, and refer it to the other Grievance Officer where necessary.
+    \item The Grievance Officer(s) should gather information about the grievance from the person reporting a grievance, to determine the necessary steps to be taken.
+    \item The Grievance Officer(s) should investigate the grievance, including contacting relevant parties for further information, notifying those alleged to have caused the grievance of the allegations made against them and giving them the opportunity to respond.
+    \item The Grievance Officer(s) should document details of all conversations and dates in writing in the secure Equity Officer account.
     \end{enumerate}
-  \item External Referral
+  \item Any person involved in an investigation conducted through the Grievance Resolution Policy shall be afforded:
     \begin{enumerate}
-    \item If necessary, grievances may be referred to relevant university or legal authorities.
+    \item At least five (5) working days’ notice of meeting;
+    \item Sufficient information about the allegations, the relevant facts and evidence;
+    \item At least five (5) working days to consider their response;
+    \item An opportunity to respond to allegations;
+    \item A fair and reasonable inquiry into the grievance;
+    \item A right of appeal.
     \end{enumerate}
   \end{enumerate}
 
-\item Roles and Responsibilities
+\item Appeal/Review of Decision
   \begin{enumerate}
-  \item The Executive and Co-Equity Officers are responsible for managing grievance processes.
-  \item Members must cooperate with investigations and respect outcomes.
-  \item Confidentiality must be maintained except where disclosure is legally required.
+  \item If the person reporting a grievance is not satisfied with how the grievance has been handled, they may refer the grievance to the Executive, taking into account conflicts of interest.
+  \item An appeal must be submitted in writing within 5 working days of receiving notification of the outcome of the formal grievance and must specify the reasons for the appeal.
+  \item Once notified, the Executives receiving the appeal will conduct a review of the procedure followed, the outcome issued and make a final determination on the issue. Once this determination is made, the person who has made the appeal will be notified of the outcome.
   \end{enumerate}
 
-\item Outcome and Follow-Up
+\item Confidentiality Requirements
   \begin{enumerate}
-  \item Appropriate sanctions or remedies will be applied where grievances are substantiated.
-  \item The Society will monitor and review grievance trends to improve culture and prevent recurrence.
+  \item Those involved in any procedure under the Grievance Resolution Policy must maintain the confidentiality of the identity of the person(s) and of the grievance.
+  \item Where incidents are required to be reported to Arc, UNSW or the police, the person reporting a grievance will be informed and upon request the report will be de-identified unless identification is required by law.
+  \item If the Grievance Officer is of the reasonable opinion that it is not appropriate to notify the complainant before reporting to Arc, UNSW or the police, this notification can be withheld but the Grievance Officer must let the organisation(s) receiving the report that this notification was not given to the complainant.
+  \item Any breaches of confidentiality will be taken seriously and may be reported to UNSW.
+  \end{enumerate}
+
+\item General Requirements
+  \begin{enumerate}
+  \item The Grievance Resolution Policy should not be used in resolving personal disputes where none of the parties involved are acting on behalf of the Club. For the avoidance of doubt, this provision shall not limit the effect of the Equity Policy.
+  \item The maximum time frame for raising grievances for which no reasonable excuse explaining the delay has been provided to the Debating Society or Arc @ UNSW is 90 days. In the case of longer-term or repetitive issues, at least one instance must have occurred within this period.
   \end{enumerate}
 \end{enumerate}
+
