--- a/sections/appendix-a-equity-policy.tex
+++ b/sections/appendix-a-equity-policy.tex
@@ -1,5 +1,6 @@
-\newpage
-\section{UNSW Debating Society Equity Policy}
+\renewcommand\thesubsection{}
+\subsection{Appendix A - UNSW Debating Society Equity Policy}
+\renewcommand\thesubsection{\Alph{subsection}}
 
 \begin{enumerate}
 \item Aim of the Equity Officers
@@ -10,8 +11,10 @@
 \item Application
   \begin{enumerate}
   \item This policy applies to all society members and all attendees of society events.
-  \item It applies during any event run by the UNSW Debating Society, or event at which a member represents the society.
-  \item It applies to interactions between members which arise out of their society membership.
+  \begin{enumerate}
+    \item It applies during any event run by the UNSW Debating Society, or event at which a member represents the society.
+    \item It applies to interactions between members which arise out of their society membership.
+  \end{enumerate}
   \item This policy applies in addition to relevant laws, Codes of Conduct and the requirement to follow reasonable instructions from institutional Co-Equity Officers or tournament equity officers.
   \item Complaints will be treated primarily from the aggrieved individual’s perspective. This policy does not exhaustively state the grounds for equity complaints, individuals are encouraged to discuss any concerns with the Co-Equity Officers.
   \item Voluntary intoxication is not a defence to breaches of this policy.
@@ -45,7 +48,7 @@
   \item Equity issues/complaints may be raised by:
     \begin{enumerate}
     \item Contacting or speaking with one of the Co-Equity Officers;
-    \item Emailing the Co-Equity Officers at unswdebsocequity@gmail.com; or
+    \item Emailing the Co-Equity Officers at \\unswdebsocequity@gmail.com; or
     \item Submitting a complaint anonymously via an online form that will be made available at tournaments, on social media and on the UNSW Debsoc website. However punitive action against the alleged offender will not be taken where a complaint has been received anonymously.
     \end{enumerate}
   \item After an equity complaint has been raised, the Co-Equity Officers may take action including (but not limited to):
@@ -63,9 +66,9 @@
     \item Restricting from trialling for or representing the society at tournaments.
     \end{enumerate}
   \item The alleged offender must be informed of the allegations against them and given the opportunity to respond before punitive action is taken (except where the Co-Equity Officers believe that it is necessary to involve relevant authorities).
-  \item Debsoc and the Co-Equity Officers are not bound by the rules of procedural fairness where adherence to those rules would endanger the physical or psychological safety of any person:
+  \item Debsoc and the Co-Equity Officers are not bound by the rules of procedural fairness where adherence to those rules would endanger the physical or psychological safety of any person: \label{procedural_fairness}
     \begin{enumerate}
-    \item Where section 4.7. applies, the rules of procedural fairness must be adhered to, but only to the extent that adherence does not endanger the physical or psychological safety of any person.
+    \item Where section \ref{procedural_fairness} applies, the rules of procedural fairness must be adhered to, but only to the extent that adherence does not endanger the physical or psychological safety of any person.
     \end{enumerate}
   \end{enumerate}
 \end{enumerate}
