--- a/sections/04-executive.tex
+++ b/sections/04-executive.tex
@@ -61,11 +61,11 @@
     \item The Constitution, or
     \item The Executive.
     \end{enumerate}
-  \item A new position of the Executive is created outside of the notice period prescribed in \ref{agm_notice_proc} for an Arc-compliant AGM.
+  \item A new position of the Executive is created outside of the notice period prescribed in \bref{agm_notice_proc} for an Arc-compliant AGM.
   \end{enumerate}
 \item Casual vacancies may be filled by either:
   \begin{enumerate}
-  \item Temporarily co-opting a member of Debsoc to a position by resolution of the Executive - such a person shall have no voting power and shall serve for a period of no longer than one month, whereby their position will be filled in accordance with \ref{vacancy_egm}; or
+  \item Temporarily co-opting a member of Debsoc to a position by resolution of the Executive - such a person shall have no voting power and shall serve for a period of no longer than one month, whereby their position will be filled in accordance with \bref{vacancy_egm}; or
   \item Electing someone to the position at an Extraordinary General Meeting. \label{vacancy_egm}
   \end{enumerate}
 \item A person who causes a casual vacancy may be subject to punitive measures determined by the Trustees including but not limited to:
@@ -118,17 +118,17 @@
   \item May delegate its authority, except for this power of delegation (unless explicitly resolved). The Executive may create or revoke any delegations by resolution.
   \item The Executive is at all times bound by decisions of an Annual General Meeting or Extraordinary General Meeting of Debsoc.
   \end{enumerate}
-\item With the exception of the positions of Co-Equity Officer (male), Co-Equity Officer (female), and Immediate Past President, no person may hold two of the positions outlined in section \ref{exec_positions}.
+\item With the exception of the positions of Co-Equity Officer (male), Co-Equity Officer (female), and Immediate Past President, no person may hold two of the positions outlined in section \bref{exec_positions}.
 \item Debsoc must not endorse any candidate or group of candidates in any election, except where a motion to do so has been passed by a two-thirds majority of the Executive. \label{exec_endorsements}
   \begin{enumerate}
   \item Any motion to endorse a candidate or group of candidates must specify the reasons for endorsing them, and those reasons must be noted in the minutes.
-  \item For the purposes of section \ref{exec_endorsements}, endorsing a candidate includes any act of publicising or expressing support for a candidate through any medium associated with Debsoc.
+  \item For the purposes of section \bref{exec_endorsements}, endorsing a candidate includes any act of publicising or expressing support for a candidate through any medium associated with Debsoc.
   \item Endorsing a candidate does not include any actions taken by members of the Executive in their personal capacity.
   \end{enumerate}
 \item The following provisions apply if a member of the Executive has a conflict of interest: \label{coi_provisions}
   \begin{enumerate}
   \item A member of the Executive must inform the Executive if they have a conflict of interest in relation to a matter being voted on or discussed by the Executive.
-  \item For the purpose of sections \ref{coi_provisions}, a member of the Executive shall be deemed to have a conflict of interest if they have an interest that is likely to materially affect their vote, or is likely to be perceived by members of the Society as materially affecting their vote.
+  \item For the purpose of sections \bref{coi_provisions}, a member of the Executive shall be deemed to have a conflict of interest if they have an interest that is likely to materially affect their vote, or is likely to be perceived by members of the Society as materially affecting their vote.
     \begin{enumerate}
     \item Matters in which a member will have a conflict of interest include, but are not limited to:
       \begin{enumerate}
@@ -138,7 +138,7 @@
     \item Members will not have a conflict of interest in:
       \begin{enumerate}
       \item Matters involving practical arrangements for trials which are unlikely to affect the member’s result in those trials.
-      \item Matters involving determination of subsidies pursuant to section \ref{subsidy_determination_deadline}.
+      \item Matters involving determination of subsidies pursuant to section \bref{subsidy_determination_deadline}.
       \item Matters involving an allocation of funding to their portfolio.
       \end{enumerate}
     \item Any dispute about whether the member has a conflict of interest shall be resolved by a vote of all Executive members.
