--- a/sections/05-executive-roles.tex
+++ b/sections/05-executive-roles.tex
@@ -5,7 +5,7 @@
   \begin{enumerate}
   \item The aim of the President is:
     \begin{enumerate}
-    \item To fulfil the aims and objective in section \ref{debsoc_aims}.
+    \item To fulfil the aims and objective in section \bref{debsoc_aims}.
     \end{enumerate}
   \item The roles of the President are:
     \begin{enumerate}
@@ -28,7 +28,7 @@
     \end{enumerate}
   \item The roles of the Vice President (Income/Treasurer) are:
     \begin{enumerate}
-    \item To oversee the prudent financial management of Debsoc including but not limited to section \ref{finances_section};
+    \item To oversee the prudent financial management of Debsoc including but not limited to section \bref{finances_section};
     \item To maintain Debsoc’s accounts;
     \item To organise the budget of Debsoc to be approved by the Executive;
     \item To solicit sponsorship for Debsoc from within UNSW and from sponsors;
@@ -151,7 +151,7 @@
 
 \item Immediate Past President
   \begin{enumerate}
-  \item The Immediate Past President shall serve as an ex-officio member of the Executive unless they are not a current UNSW student or Arc member, in accordance with \ref{ipp_desc}.
+  \item The Immediate Past President shall serve as an ex-officio member of the Executive unless they are not a current UNSW student or Arc member, in accordance with \bref{ipp_desc}.
   \item The roles of the Immediate Past President are:
     \begin{enumerate}
     \item To advise the Executive on the past practice of Debsoc;
