--- a/sections/06-selections.tex
+++ b/sections/06-selections.tex
@@ -7,13 +7,13 @@
   \item The Vice President (Externals) shall ensure a policy is approved by the Executive regarding the manner of selections for all Intervarsity tournaments. There may be different policies for different tournaments. This policy will be used upon approval by the Executive.
   \item Such policies shall be put into writing and a copy kept with the Secretary/Arc Liaison.
   \item Prior to selections for a tournament, members shall be made aware of the policy pertaining to that tournament and will agree to the policy by signing a copy of the policy.
-  \item If a member believes that not all procedures were followed in trials, selections will not be invalidated if they have been conducted duly and fairly. This is firstly to be decided by the panel constituted under \ref{flying_resolution}, and if this is not satisfactory for all parties, then trial results may be ratified or a retrial ordered by a general vote at an AGM or EGM. \label{improper_trial_resolution}
+  \item If a member believes that not all procedures were followed in trials, selections will not be invalidated if they have been conducted duly and fairly. This is firstly to be decided by the panel constituted under \bref{flying_resolution}, and if this is not satisfactory for all parties, then trial results may be ratified or a retrial ordered by a general vote at an AGM or EGM. \label{improper_trial_resolution}
     \begin{enumerate}
-    \item An EGM held for the purposes of \ref{improper_trial_resolution} must comply with the requirements of \ref{egm_procedure}.
+    \item An EGM held for the purposes of \bref{improper_trial_resolution} must comply with the requirements of \bref{egm_procedure}.
     \end{enumerate}
   \item There shall be separate selections for each intervarsity tournament.
-  \item The selections shall be conducted by independent selectors on the basis of merit, subject to other provisions in section \ref{selections_section}, and any variations should be done with the unanimous agreement of all affected individuals.
-  \item Unless otherwise provided by this section \ref{selections_section}, ranked lists are to remain confidential.
+  \item The selections shall be conducted by independent selectors on the basis of merit, subject to other provisions in section \bref{selections_section}, and any variations should be done with the unanimous agreement of all affected individuals.
+  \item Unless otherwise provided by this section \bref{selections_section}, ranked lists are to remain confidential.
   \item An individual is not to be put into the same team as a person against whom they have declared a conflict:
     \begin{enumerate}
     \item The conflict must have been declared to the Co-Equity Officers prior to the release of the teams, unless special circumstances exist which make non-declaration prior to release of the contingent reasonable.
@@ -75,16 +75,16 @@
     \item If objection is raised, the first ranked debater may ask the objecting debater to be in their team or elect to drop down.
     \item If no objections are raised, a team is formed.
     \end{enumerate}
-  \item The next ranked debater who is not currently in a team repeats the process outlined in \ref{wudc_contingent_forming_procedure}.
+  \item The next ranked debater who is not currently in a team repeats the process outlined in \bref{wudc_contingent_forming_procedure}.
   \item Any team which causes a failure in affirmative action may elect to drop down and remain unaffected by that policy.
   \item When all teams have been formed, the debating contingent has been formed.
     \begin{enumerate}
     \item Any additional debating positions granted will be offered in order to the highest-ranked debaters not already selected in the debating contingent, subject to affirmative action requirements, until those positions are filled.
-    \item If any debating position is vacated before two weeks have passed since the debating contingent was first formed, the debating contingent will no longer be considered formed and will be re-formed as per the process outlined in \ref{wudc_contingent_forming_procedure}.
+    \item If any debating position is vacated before two weeks have passed since the debating contingent was first formed, the debating contingent will no longer be considered formed and will be re-formed as per the process outlined in \bref{wudc_contingent_forming_procedure}.
     \item If any debating position is vacated after two weeks have passed since the debating contingent has been formed, the position will be offered in order to the highest-ranked debaters not already selected in the debating contingent, subject to affirmative action requirements, until that position is filled. \label{delayed_wudc_speaker_vacation}
-    \item Any variation from \ref{delayed_wudc_speaker_vacation} must have the unanimous consent of all affected individuals.
+    \item Any variation from \bref{delayed_wudc_speaker_vacation} must have the unanimous consent of all affected individuals.
       \begin{enumerate}
-      \item An affected individual, for the purposes of this section, is taken to mean an individual in a team that is being altered under this section, or an individual in a team that is being re-numbered as a result of \ref{delayed_wudc_speaker_vacation}.
+      \item An affected individual, for the purposes of this section, is taken to mean an individual in a team that is being altered under this section, or an individual in a team that is being re-numbered as a result of \bref{delayed_wudc_speaker_vacation}.
       \end{enumerate}
     \end{enumerate}
   \end{enumerate}
@@ -147,6 +147,6 @@
 
 \item At least one half of the debating contingent and at least one half of the entire contingent (including adjudicators who fall within adjudicator caps) and at least one third of the highest ranked debating team for the Australian Intervarsity Debating Championships (‘Easters’) must be non cis-male. \label{easters_ncm_aa}
   \begin{enumerate}
-  \item If section \ref{easters_ncm_aa} cannot be satisfied because an insufficient number of non cis-men trial, section \ref{easters_ncm_aa} should be applied until no further non cis-men can be selected in the contingent.
+  \item If section \bref{easters_ncm_aa} cannot be satisfied because an insufficient number of non cis-men trial, section \bref{easters_ncm_aa} should be applied until no further non cis-men can be selected in the contingent.
   \end{enumerate}
 \end{enumerate}
