--- a/sections/07-subsidies.tex
+++ b/sections/07-subsidies.tex
@@ -32,7 +32,7 @@
   \item Adjudicating members;
   \item Serving the society.
   \end{enumerate}
-\item The Executive may grant exemptions to section \ref{service_req_exemption} on a case by case basis. In deciding whether to grant an exemption the Executive must consider:
+\item The Executive may grant exemptions to section \bref{service_req_exemption} on a case by case basis. In deciding whether to grant an exemption the Executive must consider:
   \begin{enumerate}
   \item The total number of service points accrued by the individual;
   \item The opportunities available to obtain service points;
