--- a/sections/09-finance.tex
+++ b/sections/09-finance.tex
@@ -3,7 +3,7 @@
 
 \begin{enumerate}
 \item The club shall hold an account with a financial institution on University campus.
-\item The Treasurer shall only carry out financial payments if approved by the Executive. All budgetary outlays of greater than \$100 (whether as a single transaction or a series of multiple transactions which add to more than this) must be passed by the executive and are not at the sole discretion of the Treasurer. In all cases, it is the responsibility of the Treasurer to show that expenditure meets the goals of Debsoc as in \ref{debsoc_aims}.
+\item The Treasurer shall only carry out financial payments if approved by the Executive. All budgetary outlays of greater than \$100 (whether as a single transaction or a series of multiple transactions which add to more than this) must be passed by the executive and are not at the sole discretion of the Treasurer. In all cases, it is the responsibility of the Treasurer to show that expenditure meets the goals of Debsoc as in \bref{debsoc_aims}.
 \item Debsoc shall nominate the VP (Income/Treasurer), President and Vice President (Externals) as signatories for the account. Debsoc may also nominate the Vice President (Internals) as signatory for the account, if appropriate.
 \begin{enumerate}
     \item All payments must be conducted by dual signatories.
