--- a/sections/12-dissolution.tex
+++ b/sections/12-dissolution.tex
@@ -4,8 +4,8 @@
 \begin{enumerate}
 \item The Dissolution will occur after the following conditions have been met:
   \begin{enumerate}
-  \item An Extraordinary General Meeting is petitioned in writing as set out in section \ref{egm_procedure}.
-  \item Procedures for notification as set out in section \ref{egm_procedure} are followed, and the reasons for the proposed dissolution are included in the notice for the meeting.
+  \item An Extraordinary General Meeting is petitioned in writing as set out in section \bref{egm_procedure}.
+  \item Procedures for notification as set out in section \bref{egm_procedure} are followed, and the reasons for the proposed dissolution are included in the notice for the meeting.
   \item Quorum for the meeting to dissolve the club shall be 20 members or three-quarters of the club membership, whichever is lesser;
     \begin{enumerate}
     \item Executive members do not count for the purpose of Quorum.
