--- a/sections/appendix-a-equity-policy.tex
+++ b/sections/appendix-a-equity-policy.tex
@@ -68,7 +68,7 @@
   \item The alleged offender must be informed of the allegations against them and given the opportunity to respond before punitive action is taken (except where the Co-Equity Officers believe that it is necessary to involve relevant authorities).
   \item Debsoc and the Co-Equity Officers are not bound by the rules of procedural fairness where adherence to those rules would endanger the physical or psychological safety of any person: \label{procedural_fairness}
     \begin{enumerate}
-    \item Where section \ref{procedural_fairness} applies, the rules of procedural fairness must be adhered to, but only to the extent that adherence does not endanger the physical or psychological safety of any person.
+    \item Where section \bref{procedural_fairness} applies, the rules of procedural fairness must be adhered to, but only to the extent that adherence does not endanger the physical or psychological safety of any person.
     \end{enumerate}
   \end{enumerate}
 \end{enumerate}
