moved preamble to style file, add header/footer

--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,10 @@
 \author{UNSW Debating Society}
-\documentclass[12pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{enumitem}
-\usepackage{titlesec}
-\usepackage{hyperref}
-\usepackage{setspace}
-\setstretch{1.2}
+\documentclass[12pt]{article}
+
+\usepackage{constitution}
 
 \title{UNSW Debating Society Constitution \\[0.5em] \large Current as of October 2024}
 \date{}
-
-% Define custom enumerate styles for nested numbering up to depth 5
-\setlist[enumerate,1]{label=\thesection.\arabic*., ref=\thesection.\arabic*, leftmargin=*}
-\setlist[enumerate,2]{label=\thesection.\arabic{enumi}.\arabic*., ref=\thesection.\arabic{enumi}.\arabic*, leftmargin=*}
-\setlist[enumerate,3]{label=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic*., ref=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic*, leftmargin=*}
-\setlist[enumerate,4]{label=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}.\arabic*., ref=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}.\arabic*, leftmargin=*}
-\setlist[enumerate,5]{label=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}.\arabic{enumiv}.\arabic*., ref=\thesection.\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}.\arabic{enumiv}.\arabic*, leftmargin=*}
-
-\newcommand{\bref}[1]{\textbf{\ref{#1}}}
 
 % ==============================================================================
 % A note on references
